<resources>
    <string name="app_name">Walker</string>

    <string name="main_click_test">点击</string>
    <string name="title_custom_notification_fold">测试自动展开</string>
    <string name="content_drawer_layout">抽屉侧滑</string>
    <string name="toolbar_title_search">搜索</string>
    <string name="toolbar_title_share">分享</string>
    <string name="toolbar_title_setting">设置</string>
    <string name="toolbar_title_main_page">首页</string>
    <string name="hint_login_username">请输入账号</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="nav_main_page">首页</string>
    <string name="nav_items">事项</string>
    <string name="nav_music">音乐</string>
    <string name="nav_message">消息</string>

    <string name="demo_featured_item">这是一条测试显示的item，暂时没有网络请求的数据</string>
</resources>
