<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainActivity">

    <item
        android:id="@+id/tb_search"
        android:orderInCategory="80"
        android:title="@string/toolbar_title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="90"
        android:title="@string/toolbar_title_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tb_setting"
        android:orderInCategory="100"
        android:title="@string/toolbar_title_setting"
        app:showAsAction="ifRoom" />
</menu>